[package]
name = "significance-clustering"
description = "Multi-level Significance Clustering"
version = "0.1.0"
edition = "2021"
repository = "github.com/mapequation/multilevel-significance-clustering"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
itertools = "0.10.3"
hashbrown = { version = "0.12.0", features = ["rayon", "inline-more"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.5.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.79"
getrandom = { version = "0.2.5", features = ["js"] }
js-sys = "0.3.56"
